objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Asset_Combo__c</fullName>
        <formula>Name&amp;&quot;  -  DOP:  &quot;&amp;TEXT(InstallDate)&amp;&quot;  Ser #:  &quot;&amp;SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Combo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>300</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entitelemt_Indicator__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;CASE( Entitlement_Status__c, 
&quot;Expired&quot;, &quot;01515000004olUs&quot;, 
&quot;Active&quot;, &quot;01515000004olUq&quot;, 
&quot;30 Day Warning&quot;, &quot;01515000004olUr&quot;,
&quot;01515000004olUq&quot;),&quot;Active Contract?&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Status__c</fullName>
        <label>Entitlement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Day Warning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>43</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(  Product2.purl__c   , &quot;No Image&quot;, 50, 85)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Products__c</fullName>
        <label>Suggested Products</label>
        <picklist>
            <picklistValues>
                <fullName>Product 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>